--- a/ms-portfolio/src/components/pages/Projects/Projects.module.scss
+++ b/ms-portfolio/src/components/pages/Projects/Projects.module.scss
@@ -110,8 +110,8 @@ $gallery-gap-fixed: 162px;
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background: linear-gradient(to right, transparent 0%, #4a22bd 20%, #e838cc 60%, #4a22bd 80%, transparent 100%);
-	opacity: 0;  /* Zmienione na 0.5 dla większej przezroczystości */
+	background: linear-gradient(to right, transparent 0%, #4a22bd 15%, #e838cc 50%, #4a22bd 85%, transparent 100%);
+	opacity: 0; 
 	display: flex;
 	justify-content: center;
 	align-items: center;
