--- a/ms-portfolio/src/output.css
+++ b/ms-portfolio/src/output.css
@@ -1018,6 +1018,11 @@ video {
   line-height: 1.75rem;
 }
 
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -1124,9 +1129,9 @@ video {
   width: 9rem;
 }
 
-.hover\:bg-black:hover {
+.hover\:bg-main:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(31 33 38 / var(--tw-bg-opacity));
+  background-color: rgb(46 34 87 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-neon:hover {
@@ -1249,6 +1254,11 @@ video {
     font-size: 1.25rem;
     line-height: 1.75rem;
   }
+
+  .sm\:text-xs {
+    font-size: 0.75rem;
+    line-height: 1rem;
+  }
 }
 
 @media (min-width: 768px) {
@@ -1307,6 +1317,11 @@ video {
     line-height: 1;
   }
 
+  .md\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
   .md\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
@@ -1350,6 +1365,11 @@ video {
   .lg\:text-8xl {
     font-size: 6rem;
     line-height: 1;
+  }
+
+  .lg\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 }
 
